--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-lnk fnt-ert-px" href="#terlaris">Terlaris</a>
           </li>
           <li class="nav-item">
-            <a class="nav-lnk fnt-ert-px" href="#">Premium</a>
+            <a class="nav-lnk fnt-ert-px" href="#kontak">Kontak</a>
           </li>
         </ul>
         <form class="d-flex fnt-ert-px">
@@ -70,7 +70,7 @@
   </section>
 
   <!-- ikon -->
-  <section id="ikon" class="new">
+  <section id="ikon" class="new bg-success">
     <div class="container py-5">
       <div class="row pt-6">
         <div class="col-lg-7 m-auto">
@@ -98,17 +98,132 @@
           <h1 class="fnt-ert">
             Produk Terlaris
           </h1>
-          <h6 class="fnt-ert-px" style="color: crimson;">
+          <h6 class="fnt-ert-px text-danger">
             Hidup Sehat dengan Produk Herbal
           </h6>
         </div>
       </div>
+      <!-- card -->
+      <div class="row pt-4">
+        <div class="col-lg-3 m-auto text-center pt-4">
+          <div class="card bg-warning" style="width: 18rem;">
+            <img src="watermelon.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text fnt-ert-px">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 m-auto text-center pt-4">
+          <div class="card bg-warning" style="width: 18rem;">
+            <img src="baked-potato.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text fnt-ert-px">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 m-auto text-center pt-4">
+          <div class="card bg-warning" style="width: 18rem;">
+            <img src="steak.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text fnt-ert-px">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 m-auto text-center pt-4">
+          <div class="card bg-warning" style="width: 18rem;">
+            <img src="ench-gldn-appl.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text fnt-ert-px">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
+  <!-- contact -->
+  <section class="contact" id="kontak">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 m-auto text-center pt-5">
+          <h1 class="fnt-ert">
+            Kontak Kami
+          </h1>
+          <h6 class="fnt-ert-px text-danger">
+            Layanan pelanggan tersedia 24 jam
+          </h6>
+        </div>
+      </div>
+      <div class="row py-5">
+        <div class="col-lg-9 m-auto">
+          <div class="row">
+            <div class="col-lg-4">
+              <h6>
+                Lokasi
+              </h6>
+              <p>
+                Jl. Raya No. 123, Jakarta
+              </p>
+              <h6>
+                Telepon
+              </h6>
+              <p>
+                (021) 123-4567
+              </p>
+              <h6>
+                Email
+              </h6>
+              <p>
+                info@herbal.com
+              </p>
+            </div>
+            <div class="col-lg-7">
+              <div class="row">
+                <div class="col-lg-6">
+                  <input type="text" class="form-control bg-warning-emphasis" required placeholder="Nama Depan">
+                </div>
+                <div class="col-lg-6">
+                  <input type="text" class="form-control bg-warning-emphasis" placeholder="Nama Belakang">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 py-3">
+                  <textarea name="" id="" class="form-control bg-light" required placeholder="Masukkan Pesan"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <button class="btn1 fnt-ert-px mt-3">
+                  Kirim Pesan
+                </button>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- society -->
+  <section class="news fnt-ert py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 m-auto text-center">
+          <h1>Gabung ke Komunitas Kami</h1>
+          <input type="email" required placeholder="Masukkan Email Anda" required class="px-3 py-2 mt-3">
+          <button class="btn2">Kirim</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-</script>
+  </script>
 
 </html>
